# Systems_Networking_Project

./: .gitignore  CMakeLists.txt  README.md  packetgen  results_mixed.txt  test_constant.txt  test_mixed.txt
.github/workflows/: ci.yml
cache_sim/: Cache.cpp  Cache.h  CacheHierarchy.cpp  CacheHierarchy.h  CacheLine.h  README.md  ReplacementPolicy.h  TraceGenerator.cpp  cache_sim  cache_writeup_1.docx  main.cpp  trace_mixed.txt  trace_random.txt  trace_sequential.txt  trace_strided.txt  trace_workingset.txt  tracegen
packet_sim/: Packet.h  PacketGenerator.cpp  PacketProcessor.cpp  PacketProcessor.h  RingBuffer.cpp  RingBuffer.h  main.cpp  packet_sim_run  results_bursty.txt  results_constant.txt  test_bursty.txt
results/: results_bursty.txt  results_cache.txt  results_constant.txt  results_mixed.txt
tests/: CMakeLists.txt  test_cache.cpp  test_hierarchy.cpp  test_processor.cpp  test_ringbuffer.cpp
tests/fixtures/: malformed_trace.txt
